--- a/Caddyfile
+++ b/Caddyfile
@@ -1,7 +1,7 @@
 :8080 {
     route {
         caddy_mib {
-            error_codes 404 500
+            error_codes 404
             max_error_count 100
             ban_duration 10m
             output stdout
