--- a/Caddyfile
+++ b/Caddyfile
@@ -1,17 +1,22 @@
+{
+    admin off
+    log {
+        level debug
+    }
+}
+
 :8080 {
     route {
         caddy_mib {
-            error_codes 404
-            max_error_count 100
-            ban_duration 10m
-            output stdout
+            error_codes 404       # Track 404 errors
+            max_error_count 5     # Number of errors allowed before ban
+            ban_duration 10m      # Ban duration for violating IPs
+            output stdout         # Log output (stdout/stderr)
         }
-
         file_server {
-            root /Users/fab/caddy-mib
+            root /var/www/html
         }
     }
-
     log {
         output stdout
         format json
