--- a/Caddyfile
+++ b/Caddyfile
@@ -10,18 +10,19 @@
 :8080 {
     route {
         caddy_mib {
-            error_codes 404
-            max_error_count 100
-            ban_duration 1m
-            ban_duration_multiplier 2
-            whitelist 192.168.1.10 10.0.0.0/24 2001:db8::1
-            log_level debug
-            log_request_headers User-Agent X-Forwarded-For
-            custom_response_header "Blocked by Caddy MIB"
-            ban_response_body "You have been banned due to excessive errors. Please try again later."
+            error_codes 404                     # Error codes to track (e.g., 404, 500)
+            max_error_count 100                 # Number of errors allowed before banning
+            ban_duration 1m                     # Base duration to ban IPs (e.g., 1m, 10m)
+            ban_duration_multiplier 2           # Increase ban duration exponentially (e.g., 2x)
+            whitelist 192.168.1.10 10.0.0.0/24 2001:db8::1 # Whitelist specific IPs or CIDR ranges
+            log_level debug                     # Log level for debugging
+            log_request_headers User-Agent X-Forwarded-For # Log specific headers
+            custom_response_header "Blocked by Caddy MIB" # Custom header for banned IPs
+            ban_response_body "You have been banned due to excessive errors. Please try again later." # Custom ban response
+            ban_status_code 429                 # Status code for banned IPs (403 or 429)
         }
         file_server {
-            root /Users/fab/caddy-mib
+            root /Users/fab/caddy-mib           # Serve files from this directory
         }
     }
 }
