test script updated and minor improvements

--- a/Caddyfile
+++ b/Caddyfile
@@ -14,9 +14,9 @@
             max_error_count 10           # Global error threshold (reduced for faster testing)
             ban_duration 5s             # Global ban duration (reduced to 10 seconds)
             ban_duration_multiplier 1    # Global ban duration multiplier
-            whitelist 127.0.0.1 ::1       # Whitelisted IPs
+            # whitelist 127.0.0.1 ::1       # Whitelisted IPs
             log_level debug              # Log level for debugging
-            ban_response_body "You have been banned due to excessive errors. Please try again later."
+            ban_response_body      "You have been banned due to excessive errors. Please try again later."
             ban_status_code 429          # Custom status code for banned IPs
 
             # Per-path configuration for /login
@@ -37,7 +37,7 @@
         }
         # All other requests, respond with "Hello World"
         handle {
-            respond "Hello world!" 200
+            respond "Hello world!" 404
         }
     }
 }
